# StatiC

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE
example/: index.html
include/: connection.h  parser.h  request.h  server.h  string_view.h
src/: connection.c  main.c  parser.c  server.c
test/: test_parser.c
